Thu Aug 25 2005  Loic Dachary  <loic@gnu.org>

	* pokernetwork/__init__.py (protocol_number): 
	* pokernetwork/protocol.py: protocol version is independent from the
	  package version

	* Makefile.am (sbin_SCRIPTS): pokerbot man page / program installation.

	* pokernetwork/pokerbot.in: standalone bot program.

	* pokernetwork/pokerbot.8.in: manual page for standalone bot program.

	* pokernetwork/pokerbot.py (makeApplication): make run function to
	  ease launch as a standalone program instead of a twisted daemon.

Wed Aug 24 2005  Loic Dachary  <loic@gnu.org>

	* pokernetwork/pokerpackets.py: GetPlayerInfo packet

	* configure.ac (UPGRADES_SOURCE): set default before it is used.

Wed Aug 17 2005  Loic Dachary  <loic@gnu.org>

	* Release 1.0.6

	* upgrades: upgrade files for poker.{bot,client,server}.xml

	* pokerclient2d/upgrades: poker2d.xml and client.xml upgrades

	* tests/upgrade.in: run .xml files upgrades

	* tests/conf: 1.0.5 configuration files archives.

	* pokernetwork/{config,version}.py: derive from equivalent files
	  from poker-engine

	* configure.ac: take the version number from pokernetwork/__init__.py
	
	* pokernetwork/__init__.py: version_number is the source of the version.

Sun Aug 14 2005  Loic Dachary  <loic@gnu.org>

	* database/pokerdatabaseupgrade.8.in: manual page for database
	  upgrade utility

	* database/pokerdatabaseupgrade.in: run database upgrades stored
	  in .sql files to reach the current software version number
	
	* database/1.0.5-1.0.6.sql: database upgrade to 1.0.6

	* ChangeLog: remove hour stamp
	
	* Makefile.am: run tests, add pokerdatabaseupgrade utility, 
	  migration file from 1.0.5 to 1.0.6

	* configure.ac: detect mysql client program, substitute pkgdatadir, 
	  configure tests and upgrade programs. Substitute prefix early
	  so that path are accurate if --prefix is not specified.

Sat Aug 13 2005  Loic Dachary  <loic@gnu.org>

	* pokernetwork/version.py.in (version): stores the string of the