@@ -68,7 +68,6 @@ Other GNU/Linux or Unices :
         mysqladmin -u root -p create pokernetwork
         mysql -u root -p pokernetwork < /usr/local/share/poker-network/schema.sql 
         mysql -u root -p -e "insert into user (Host, User, Password, Select_priv, Insert_priv, Update_priv, Delete_priv) values ('localhost', 'pokernetwork', password('pokernetwork'), 'Y', 'Y', 'Y', 'Y')" mysql
-        mysql -u root -p -e "insert into db (Host, Db, User, Select_priv, Insert_priv, Update_priv, Delete_priv) values ('localhost', 'pokernetwork', password('pokernetwork'), 'Y', 'Y', 'Y', 'Y')" mysql
         mysqladmin -u root -p reload
 
 Others : the client part is known to work but there is no howto
