@@ -2,6 +2,8 @@ Release 1.0.7
 
 Standalone poker bot program.
 
+Protocol number is no longer bound to the package number.
+
 Bug fixes.
 
 Release 1.0.6
